--- a/Features/Setting up your Account for Mobile.mdx
+++ b/Features/Setting up your Account for Mobile.mdx
@@ -19,69 +19,68 @@ The Next Level3 application is available for both Android and iOS devices and is
 
 
 ## Apple Devices
-image
 ### Accessing the App
 
 After installing the application you will need to either register your company portal account or sign into your account. View the sections below for information about the functionality of the application.
 
 <AccordionGroup>
     <Accordion
-    title="Registering your company portal account"
+    title="Registering your Company Portal Account"
     icon="User">
     <Tabs>
         <Tab
-        title=" "
+        title="Step"
         icon="1">
         ### Tap "Login / Create Account"
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170.png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="2">
         ### Tap "Register a new account"
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (1).png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (1).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="3">
         ### Fill in the required information and tap \"Register\"
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\iphone-x-mockup-against-a-solid-color-background-a17170 (8).png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (8).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="4">
         ### Enter the verification code that was sent to the email used in account registration process
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\verification code dialogue.png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/verification code dialogue.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="5">
         ### Verification email should look like the following
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\computer-mockup-with-a-colored-background-26133 (2).png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/computer-mockup-with-a-colored-background-26133 (2).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="6">
         ### After entering the verification code, enter your username and tap "Sign in"
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\post verification code sign in.png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/post verification code sign in.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="7">
         ### Tap "Continue" to save the passkey to your Apple Keychain
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\iphone-x-mockup-against-a-solid-color-background-a17170 (9).png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (9).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="8">
         ### Tap "Continue" to use your Next Level3 passkey
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\iphone-x-mockup-against-a-solid-color-background-a17170 (10).png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (10).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step"
         icon="9">
         ### Use biometric scanning to authenticate into your account
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\iphone-x-mockup-against-a-solid-color-background-a17170 (11).png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (11).png" />
         </Tab>
     </Tabs>
     </Accordion>
@@ -93,49 +92,49 @@ After installing the application you will need to either register your company p
         title=" "
         icon="1">
         ### Tap \"Login / Create Account\"
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170.png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170.png" />
         </Tab>
         <Tab
         title=" "
         icon="2">
         ### Enter your Username, and tap \"Sign In\"
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\post verification code sign in.png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/post verification code sign in.png" />
         </Tab>
         <Tab
         title=" "
         icon="3">
         ### Tap \"Ok\", an approval request has been sent to your paired device
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (2).png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (2).png" />
         </Tab>
         <Tab
         title=" "
         icon="4">
         ### Click \"Approve\", to allow access for the new device you are pairing
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\computer-mockup-with-a-colored-background-26133.png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/computer-mockup-with-a-colored-background-26133.png" />
         </Tab>
         <Tab
         title=" "
         icon="5">
         ### Enter your credentials and tap sign in (use the optional, \"Remember Me\" checkbox, to stay signed in)
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (3).png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (3).png" />
         </Tab>
         <Tab
         title=" "
         icon="6">
         ### Tap "Continue", to create your passkey for Apple Keychain
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (4).png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (4).png" />
         </Tab>
         <Tab
         title=" "
         icon="7">
         ### Tap "Continue", to sign in with your passkey
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (7).png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (7).png" />
         </Tab>
         <Tab
         title=" "
         icon="8">
         ### Use biometric scanning to authenticate into your account
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\iphone-x-mockup-against-a-solid-color-background-a17170 (6).png" />
+        <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (6).png" />
         </Tab>
     </Tabs>
     </Accordion>
@@ -148,71 +147,71 @@ After installing the application you will need to either register your company p
     icon="bell">
     Notifications are managed in the Notifications pane.
     - **Account Unlock Request** - When an account is locked, users will receive a notification to Approve/Reject unlocking the account. Unlock requests inform the users about the location the request originated from as well as the account and application requested to be unlocked.
-    <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Notification - Account Unlock Request.png" />
+    <img src="/images/walkthrough/apple/functionality/Apple - Notification - Account Unlock Request.png" />
     - **Device Registration Request** - When a user registers a new device with Next Level3, they must first approve adding that device by accepting an Add Device request. This request must be approved before the new device is added to the users account.
-    <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Notification - Device Registration Request.png" />
-    - **Secondary Approval Request** - Secondary Approval Unlock Requests are sent to users who are listed as the secondary approver for the multi-approval policies. If an account is associated to a multi-approval policy, all secondary approvers are sent a Account Unlock Request after the primary approver has approved unlocking the account.
-    <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Notification - Secondary Approval Request.png" />
+    <img src="/images/walkthrough/apple/functionality/Apple - Notification - Device Registration Request.png" />
+    - **Secondary Approval Request** - Secondary Approval Unlock Requests are sent to users who are listed as the secondary approver for the multi-approval policies. If an account is associated to a multi-approval policy, all secondary approvers are sent an Account Unlock Request after the primary approver has approved unlocking the account.
+    <img src="/images/walkthrough/apple/functionality/Apple - Notification - Secondary Approval Request.png" />
 </Accordion>
 <Accordion
     title="Accounts"
     icon="user-shield">
     Accounts are managed in the Account pane. This is where you can turn your account lock status switch on/off to manage access for your accounts. 
-    <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Accounts.png" />
+    <img src="/images/walkthrough/apple/functionality/Apple - Accounts.png" />
 </Accordion>
 <Accordion
     title="Settings"
     icon="gear">
     The settings pane allows you to manage your preferences for your account. The tabs below define the functionality of settings pane
-    <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings.png" />
+    <img src="/images/walkthrough/apple/functionality/Apple - Settings.png" />
     <Tabs>
         <Tab
         title="Notifications"
         icon="bell">
         The notification settings allow you to decide whether or not you would like to receive email alerts to the email associated with your account.
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Notifications.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - Notifications.png" />
         </Tab>
         <Tab
         title="Manage Devices"
         icon="mobile">
         The manage devices settings allow you to manage the devices associated with your account. 
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Manage Devices.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - Manage Devices.png" />
         Options
             Removal - To remove a device associated with your account you will need to tap the trashcan icon and then confirm removing the device by choosing OK
-            <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Manage Devices - Remove.png" />
+            <img src="/images/walkthrough/apple/functionality/Apple - Settings - Manage Devices - Remove.png" />
             Save - Is used to update the names of the devices that are associated with your account. Tap the save icon after you are finished updating the devices name.
-            <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Manage Devices - Save.png" />
+            <img src="/images/walkthrough/apple/functionality/Apple - Settings - Manage Devices - Save.png" />
         </Tab>
         <Tab
         title="User Profile"
         icon="user">
         The User Profile settings allow you to update your name that is associated with your account. If you are an admin level user you also have the option to request removal of your account from the portal.
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - User Profile.png" /> 
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - User Profile.png" /> 
         </Tab>
         <Tab
         title="Activity"
         icon="clock">
         The Activity settings allow your to view your account lock activity and is updated every time a lock activity event occurs.
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Activity.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - Activity.png" />
         </Tab>
         <Tab
         title="Auto Locking"
         icon="lock">
         The Auto Locking settings allow you to secure your accounts. If a data breach is detected by NL3 software your account will lock automatically if the "Lock all accounts when data breach detected" is turned on. We reccomend leaving this switch turned on at all times. The "Relock Any Unlocked Accounts After" setting allows you to manage the amount of time you have to access your account before it automatically locks itself.
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Auto Lock.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - Auto Lock.png" />
         </Tab>
         <Tab
         title="Support"
         icon="life-ring">
         The Support setting will take you to the Next Level3 website for more information about the company. Additionally, once you are at the website page you can tap the support icon in the bottom right corner of the screen to send us a message and we will get back to you as soon as possible.
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - Support.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - Support.png" />
         </Tab>
         <Tab
         title="Licensing"
         icon="id-badge">
         The Licensing setting allows you to view the End User License agreement. Once you agree to the the terms and conditions you can tap the support icon in the bottom right corner to send us a message and we will get back to you as soon as possible.
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - License.png" />
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Settings - License Support.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - License.png" />
+        <img src="/images/walkthrough/apple/functionality/Apple - Settings - License Support.png" />
         </Tab>
         <Tab
         title="Logout"
@@ -229,7 +228,7 @@ After installing the application you will need to either register your company p
 ### Accessing the App
 <AccordionGroup>
     <Accordion
-    title="Registering your company portal account"
+    title="Registering your Company Portal Account"
     icon="User">
     ### Follow the step-by-step tabs below to register your company portal account and get signed in:
     <Tabs>
@@ -237,42 +236,42 @@ After installing the application you will need to either register your company p
         title=" "
         icon="1">
         ### Tap "Login / Create Account"
-        <img src="C:\Users\18649\Downloads\Login - Create Account.png" />
+        <img src="/images/walkthrough/android/Login - Create Account.png" />
         </Tab>
         <Tab
         title=" "
         icon="2">
         ### Tap "Register a new account"
-        <img src="C:\Users\18649\Downloads\Sign in no name.png" />
+        <img src="/images/walkthrough/android/Sign in no name.png" />
         </Tab>
         <Tab
         title=" "
         icon="3">
         ### Fill in the required information and tap \"Register\"
-        <img src="C:\Users\18649\Downloads\Account Registration.png" />
+        <img src="/images/walkthrough/android/Account Registration.png" />
         </Tab>
         <Tab
         title=" "
         icon="4">
         ### Enter the verification code that was sent to the email used in account registration process
-        <img src="C:\Users\18649\Downloads\verification code dialogue.png" />
+        <img src="/images/walkthrough/android/Account Registration - Verification Code Sent.png" />
         </Tab>
         <Tab
         title=" "
         icon="5">
         ### Verification email should look like the following
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\account regey to sign in\computer-mockup-with-a-colored-background-26133 (2).png" />
+        <img src="/images/walkthrough/apple/account regey to sign in/computer-mockup-with-a-colored-background-26133 (2).png" />
         </Tab>
         <Tab
         title=" "
         icon="6">
         ### After entering the verification code, enter your username and tap "Sign in"
-        <img src="C:\Users\18649\Downloads\Sign in.png" />
+        <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
     </Tabs>
     </Accordion>
     <Accordion
-    title="Pairing your Apple Devices"
+    title="Pairing your Android Device"
     icon="rotate">
     ### Follow the step-by-step tabs below to pair your device:
     <Tabs>
@@ -280,55 +279,55 @@ After installing the application you will need to either register your company p
         title=" "
         icon="1">
         ### Tap \"Login / Create Account\"
-        <img src="C:\Users\18649\Downloads\Login - Create Account.png" />
+        <img src="/images/walkthrough/android/Login - Create Account.png" />
         </Tab>
         <Tab
         title=" "
         icon="2">
         ### Enter your Username, and tap \"Sign In\"
-        <img src="C:\Users\18649\Downloads\Sign in.png" />
+        <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
         <Tab
         title=" "
         icon="3">
         ### Tap \"Ok\", an approval request has been sent to your paired device
-        <img src="C:\Users\18649\Downloads\sign in - login request sent.png" />
+        <img src="/images/walkthrough/android/sign in - login request sent.png" />
         </Tab>
         <Tab
         title=" "
         icon="4">
         ### Click \"Approve\", to allow access for the new device you are pairing
-        <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\sign in for first time with new device\computer-mockup-with-a-colored-background-26133.png" />
+        <img src="/images/walkthrough/android/sign in for first time with new device\computer-mockup-with-a-colored-background-26133.png" />
         </Tab>
         <Tab
         title=" "
         icon="5">
         ### Enter your credentials and tap sign in (use the optional, \"Remember Me\" checkbox, to stay signed in)
-        <img src="C:\Users\18649\Downloads\Sign in.png" />
+        <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
         <Tab
         title=" "
         icon="6">
         ### Tap "Get Started", to use your security key with nextlevel3.com
-        <img src="C:\Users\18649\Downloads\Security key - 1.png" />
+        <img src="/images/walkthrough/android/Security key - 1.png" />
         </Tab>
         <Tab
         title=" "
         icon="7">
         ### Use your fingerprint to verify its you
-        <img src="C:\Users\18649\Downloads\Security Key - 3.png" />
+        <img src="/images/walkthrough/android/Security Key - 3.png" />
         </Tab>
         <Tab
         title=" "
         icon="8">
         ### Enter your credentials and tap sign in (use the optional, \"Remember Me\" checkbox, to stay signed in)
-        <img src="C:\Users\18649\Downloads\Sign in.png" />
+        <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
          <Tab
         title=" "
         icon="9">
         ### Use biometric scanning to authenticate into your account using your security key
-        <img src="C:\Users\18649\Downloads\Security Key - 4.png" />
+        <img src="/images/walkthrough/android/Security Key - 4.png" />
         </Tab>
     </Tabs>
     </Accordion>
@@ -341,17 +340,17 @@ After installing the application you will need to either register your company p
     icon="bell">
     Notifications are managed in the Notifications pane.
     - **Account Unlock Request** - When an account is locked, users will receive a notification to Approve/Reject unlocking the account. Unlock requests inform the users about the location the request originated from as well as the account and application requested to be unlocked.
-    <img src="C:\Users\18649\Downloads\Notifications - account unlock request - in-app.png" />
+    <img src="/images/walkthrough/android/Notifications - account unlock request - in-app.png" />
     - **Device Registration Request** - When a user registers a new device with Next Level3, they must first approve adding that device by accepting an Add Device request. This request must be approved before the new device is added to the users account.
-    <img src="C:\Users\18649\Downloads\Notifications - device registration request.png" />
-    - **Secondary Approval Request** - Secondary Approval Unlock Requests are sent to users who are listed as the secondary approver for the multi-approval policies. If an account is associated to a multi-approval policy, all secondary approvers are sent a Account Unlock Request after the primary approver has approved unlocking the account.
-    <img src="C:\Users\18649\Documents\Career\nl3\mobile app - iOS\walkthrough\apple\functionality\placeit\Apple - Notification - Secondary Approval Request.png" />
+    <img src="/images/walkthrough/android/Notifications - device registration request.png" />
+    - **Secondary Approval Request** - Secondary Approval Unlock Requests are sent to users who are listed as the secondary approver for the multi-approval policies. If an account is associated to a multi-approval policy, all secondary approvers are sent an Account Unlock Request after the primary approver has approved unlocking the account.
+    <img src="/images/walkthrough/android/Notifications - account unlock request - in-app.png" />
 </Accordion>
 <Accordion
     title="Accounts"
     icon="user-shield">
     Accounts are managed in the account pane. This is where you can turn your account lock status switch on/off to manage access for your accounts. 
-    <img src="C:\Users\18649\Downloads\Accounts - Both Locked.png" />
+    <img src="/images/walkthrough/android/Accounts - Both Locked.png" />
 </Accordion>
 <Accordion
     title="Settings"
@@ -362,13 +361,13 @@ After installing the application you will need to either register your company p
         title="Notifications"
         icon="bell">
         The notification settings allow you to decide whether or not you would like to receive email alerts to the email associated with your account.
-        <img src="C:\Users\18649\Downloads\Settings - Notifications.png" />
+        <img src="/images/walkthrough/android/Settings - Notifications.png" />
         </Tab>
         <Tab
         title="Manage Devices"
         icon="mobile">
         The manage devices settings allow you to manage the devices associated with your account. 
-        <img src="C:\Users\18649\Downloads\Settings - Manage Devices.png" />
+        <img src="/images/walkthrough/android/Settings - Manage Devices.png" />
         Options
             Removal - To remove a device associated with your account you will need to tap the trashcan icon and then confirm removing the device by choosing okay
             Save - Is used to update the names of the devices that are associated with your account. Tap the device name to edit it, then the save icon once you are finished updating the devices name.
@@ -377,37 +376,37 @@ After installing the application you will need to either register your company p
         title="User Profile"
         icon="user">
         The User Profile settings allow you to update your name that is associated with your account. If you are an admin level user you have the "Request Account Removal" option to request to remove your account from the portal.
-        <img src="C:\Users\18649\Downloads\Settings - User Profile.png" />
+        <img src="/images/walkthrough/android/Settings - User Profile.png" />
         If the option is available to request removal of your account you will need to confirm its removal by tapping the "Remove Account" option.
-        <img src="C:\Users\18649\Downloads\Settings - User Profile Removal.png" />
+        <img src="/images/walkthrough/android/Settings - User Profile Removal.png" />
         </Tab>
         <Tab
         title="Activity"
         icon="clock">
         The Activity settings allow your to view your account lock activity and is updated every time a lock activity event occurs.
-        <img src="C:\Users\18649\Downloads\Settings - Activity.png" />
+        <img src="/images/walkthrough/android/Settings - Activity.png" />
         </Tab>
         <Tab
         title="Auto Locking"
         icon="lock">
         The Auto Locking settings allow you to secure your accounts. If a data breach is detected by NL3 software your account will lock automatically if the "Lock all accounts when data breach detected" is turned on. We reccomend leaving this switch turned on at all times. The "Relock Any Unlocked Accounts After" setting allows you to manage the amount of time you have to access your account before it automatically locks itself.
-        <img src="C:\Users\18649\Downloads\Settings - AutoLock.png" />
+        <img src="/images/walkthrough/android/Settings - AutoLock.png" />
         </Tab>
         <Tab
         title="Support"
         icon="life-ring">
         The Support setting will take you to the Next Level3 website for more information about the company. Additionally, once you are at the website page you can tap the support icon in the bottom right corner of the screen to send us a message and we will get back to you as soon as possible.
-        <img src="C:\Users\18649\Downloads\Settings - Support.png" />
+        <img src="/images/walkthrough/android/Settings - Support.png" />
         </Tab>
         <Tab
         title="Licensing"
         icon="id-badge">
         The Licensing setting allows you to view the End User License agreement. 
-        <img src="C:\Users\18649\Downloads\License - 1.png" />
-        <img src="C:\Users\18649\Downloads\License - 2.png" />
-        <img src="C:\Users\18649\Downloads\License - 3.png" />
+        <img src="/images/walkthrough/android/License - 1.png" />
+        <img src="/images/walkthrough/android/License - 2.png" />
+        <img src="/images/walkthrough/android/License - 3.png" />
         Once you agree to the the terms and conditions you can tap the support icon in the bottom right corner to send us a message and we will get back to you as soon as possible.
-        <img src="C:\Users\18649\Downloads\License - Send Us A Message.png" />
+        <img src="/images/walkthrough/android/License - Send Us A Message.png" />
         </Tab>
         <Tab
         title="Logout"
