--- a/Features/Setting up your Account for Mobile.mdx
+++ b/Features/Setting up your Account for Mobile.mdx
@@ -29,55 +29,55 @@ After installing the application you will need to either register your company p
     icon="User">
     <Tabs>
         <Tab
-        title="Step"
+        title="Step 1"
         icon="1">
         ### Tap "Login / Create Account"
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170.png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 2"
         icon="2">
         ### Tap "Register a new account"
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (1).png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 3"
         icon="3">
         ### Fill in the required information and tap \"Register\"
         <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (8).png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 4"
         icon="4">
         ### Enter the verification code that was sent to the email used in account registration process
         <img src="/images/walkthrough/apple/account regey to sign in/verification code dialogue.png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 5"
         icon="5">
         ### Verification email should look like the following
         <img src="/images/walkthrough/apple/account regey to sign in/computer-mockup-with-a-colored-background-26133 (2).png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 6"
         icon="6">
         ### After entering the verification code, enter your username and tap "Sign in"
         <img src="/images/walkthrough/apple/account regey to sign in/post verification code sign in.png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 7"
         icon="7">
         ### Tap "Continue" to save the passkey to your Apple Keychain
         <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (9).png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 8"
         icon="8">
         ### Tap "Continue" to use your Next Level3 passkey
         <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (10).png" />
         </Tab>
         <Tab
-        title="Step"
+        title="Step 9"
         icon="9">
         ### Use biometric scanning to authenticate into your account
         <img src="/images/walkthrough/apple/account regey to sign in/iphone-x-mockup-against-a-solid-color-background-a17170 (11).png" />
@@ -89,49 +89,49 @@ After installing the application you will need to either register your company p
     icon="rotate">
     <Tabs>
         <Tab
-        title=" "
+        title="Step 1"
         icon="1">
         ### Tap \"Login / Create Account\"
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 2"
         icon="2">
         ### Enter your Username, and tap \"Sign In\"
         <img src="/images/walkthrough/apple/account regey to sign in/post verification code sign in.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 3"
         icon="3">
         ### Tap \"Ok\", an approval request has been sent to your paired device
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (2).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 4"
         icon="4">
         ### Click \"Approve\", to allow access for the new device you are pairing
         <img src="/images/walkthrough/apple/sign in for first time with new device/computer-mockup-with-a-colored-background-26133.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 5"
         icon="5">
         ### Enter your credentials and tap sign in (use the optional, \"Remember Me\" checkbox, to stay signed in)
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (3).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 6"
         icon="6">
         ### Tap "Continue", to create your passkey for Apple Keychain
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (4).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 7"
         icon="7">
         ### Tap "Continue", to sign in with your passkey
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (7).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 8"
         icon="8">
         ### Use biometric scanning to authenticate into your account
         <img src="/images/walkthrough/apple/sign in for first time with new device/iphone-x-mockup-against-a-solid-color-background-a17170 (6).png" />
@@ -233,37 +233,37 @@ After installing the application you will need to either register your company p
     ### Follow the step-by-step tabs below to register your company portal account and get signed in:
     <Tabs>
         <Tab
-        title=" "
+        title="Step 1"
         icon="1">
         ### Tap "Login / Create Account"
         <img src="/images/walkthrough/android/Login - Create Account.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 2"
         icon="2">
         ### Tap "Register a new account"
         <img src="/images/walkthrough/android/Sign in no name.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 3"
         icon="3">
         ### Fill in the required information and tap \"Register\"
         <img src="/images/walkthrough/android/Account Registration.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 4"
         icon="4">
         ### Enter the verification code that was sent to the email used in account registration process
         <img src="/images/walkthrough/android/Account Registration - Verification Code Sent.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 5"
         icon="5">
         ### Verification email should look like the following
         <img src="/images/walkthrough/apple/account regey to sign in/computer-mockup-with-a-colored-background-26133 (2).png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 6"
         icon="6">
         ### After entering the verification code, enter your username and tap "Sign in"
         <img src="/images/walkthrough/android/Sign in.png" />
@@ -276,55 +276,55 @@ After installing the application you will need to either register your company p
     ### Follow the step-by-step tabs below to pair your device:
     <Tabs>
         <Tab
-        title=" "
+        title="Step 1"
         icon="1">
         ### Tap \"Login / Create Account\"
         <img src="/images/walkthrough/android/Login - Create Account.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 2"
         icon="2">
         ### Enter your Username, and tap \"Sign In\"
         <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 3"
         icon="3">
         ### Tap \"Ok\", an approval request has been sent to your paired device
         <img src="/images/walkthrough/android/sign in - login request sent.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 4"
         icon="4">
         ### Click \"Approve\", to allow access for the new device you are pairing
         <img src="/images/walkthrough/android/sign in for first time with new device\computer-mockup-with-a-colored-background-26133.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 5"
         icon="5">
         ### Enter your credentials and tap sign in (use the optional, \"Remember Me\" checkbox, to stay signed in)
         <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 6"
         icon="6">
         ### Tap "Get Started", to use your security key with nextlevel3.com
         <img src="/images/walkthrough/android/Security key - 1.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 7"
         icon="7">
         ### Use your fingerprint to verify its you
         <img src="/images/walkthrough/android/Security Key - 3.png" />
         </Tab>
         <Tab
-        title=" "
+        title="Step 8"
         icon="8">
         ### Enter your credentials and tap sign in (use the optional, \"Remember Me\" checkbox, to stay signed in)
         <img src="/images/walkthrough/android/Sign in.png" />
         </Tab>
          <Tab
-        title=" "
+        title="Step 9"
         icon="9">
         ### Use biometric scanning to authenticate into your account using your security key
         <img src="/images/walkthrough/android/Security Key - 4.png" />
